--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nodemon backend/server.js",
     "server": "nodemon backend/server.js ",
-    "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix frontend && npm run build --"
+    "build": "npm install && npm install --prefix frontend && npm run build --"
   },
   "author": "sumit singh",
   "license": "ISC",
