--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "4.1",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.3",
+    "path": "^0.12.7",
     "socket.io": "^4.7.5"
   }
 }
